Updated Users list and Readme

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,11 @@
-== README
+== Rails Workout App
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+The Rails app is intended to serve as a demonstration of building an app with *RSpec, Capybara, Guard, and ElasticSearch.*
 
-Things you may want to cover:
+A *user* can sign up, log in, and add their workouts. Based on user's workout over the week, a chart will be displayed in their *"My Workouts"* page.
 
-* Ruby version
+http://i.imgur.com/8ctbbqs.png
 
-* System dependencies
+A *user* can also follow other users, by either _searching_ their name, or from the _list_ of users (which paginate at 2 at the current setting, for testing purposes)
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+*Feature* tests can be found at: spec/features
